--- a/002.CSS학습/openDoor.html
+++ b/002.CSS학습/openDoor.html
@@ -185,7 +185,7 @@
         .door2{
             position: relative;
             /* 부모자격 - .handle */
-            width: 130px;
+            width: 130po0px;
             height: 130px;
             background-color: rgba(204, 153, 0, 0.363);
 
