--- a/9997adidas/intro.html
+++ b/9997adidas/intro.html
@@ -4,20 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CGV 인트로 페이지</title>
+    <title>adidas 광고</title>
     <link rel="stylesheet" href="css/intro.css">
 </head>
 
 <body>
     <!-- 1.배경 비디오 넣기 -->
 
-    <video id="myvid" src="images/cgv.mp4" autoplay muted loop playsinline></video>
+    <video id="myvid" src="images/adidas Predator 20 (Mutator Pack).mp4" autoplay muted loop playsinline></video>
 
     <!-- 2.들어가기 버튼박스 -->
     <h1 id="enter">
         <a href="index.htnml">
-            <img src="images/logo_cgv.png" alt="CGV로고">
-            <span>Click Hear</span>
+            <!-- <img src="images/pngegg.png" alt="adia"> -->
+            <img src="images/pngwing.com.png" alt="adia">
+            <!-- <span>adidas</span> -->
         </a>
     </h1>
 
