아디다스 작업중

--- a/9997adidas/index.html
+++ b/9997adidas/index.html
@@ -168,7 +168,7 @@
             <ul>
                 <li>
                     <a href="#" onclick="멍멍('-5Dc8EMVYBo')">
-                        <img src="images/m1.jpg" alt="듄">
+                        <img src="images/Predator_Freak.1_Artificial_Grass_Cleats_Red_FY6253_01_standard.jpg" alt="듄">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
