--- a/9997adidas/intro.html
+++ b/9997adidas/intro.html
@@ -17,8 +17,8 @@
     <h1 id="enter">
         <a href="index.htnml">
             <!-- <img src="images/pngegg.png" alt="adia"> -->
-            <img src="images/pngwing.com.png" alt="adia">
-            <!-- <span>adidas</span> -->
+            <!-- <img src="images/pngwing.com.png" alt="adia"> -->
+            <span>≡adidas</span>
         </a>
     </h1>
 
