--- a/003.JS학습/js002.html
+++ b/003.JS학습/js002.html
@@ -397,6 +397,16 @@
                 결과:${res2||res2} <br>
             `);
 
+            // 사람의 성별
+            var person = "여자";
+            document.write(`
+                <br> 한사람의 성별은 ${person}입니다.<br>
+                이사람의 성별이 여자가 맞으면 false라고 답하세요!<br>
+                ${!person==="여자"} <br>
+
+            `);
+            // 결과가 true / false 가 나오는 비교연산자의 맨앞에 !(느낌표)를
+            // 붙이면 결과가 반대가 된다! (이것을 NOT연산자라고 함!)
             /********************************************************************************** 
                 7.조건 연산자(삼황연산자)
                 -if문과 유사하게 조건에 맞으면 실행할 수 있는 코드를 구분해주는 연산자다!
@@ -414,6 +424,7 @@
             **********************************************************************************/
             // 오늘의 날씨
             var today = "비";
+            today = "맑음";
             // 결과변수
             var res;
             // 조건연산자를 이용하여 결과문을 만든다!
