--- a/003.JS학습/js003.html
+++ b/003.JS학습/js003.html
@@ -14,8 +14,8 @@
         ********************************************************************/
         function jumsu() {
             //    1.함수호출여부
-            console.log("점수뭐야?");
-            // F12 개발자모드에서 "console" 탭 선택!
+            // console.log("점수뭐야?");
+            // F12 개발자모드에서 "// console" 탭 선택!
 
             // 2. 대상선정:
             // 2-1. 점수를 가져올 대상: #jumsu 인 input 요소
@@ -23,8 +23,8 @@
             // 2-2. 입력된 값 읽어오기
             var score = jumsu.value;
             // value는 값을 읽어오는 속성
-            console.log("입력값", score);
-            // console.log("메시지",변수); - 콤마 또는 플러스로 연결
+            // console.log("입력값", score);
+            // // console.log("메시지",변수); - 콤마 또는 플러스로 연결
 
             // 2-3.출력대상:#jexp
             var jexp = document.getElementById("jexp");
@@ -33,15 +33,81 @@
             var jshow = document.getElementById("jshow");
 
             /////////////////////////////////////////////////////////////
+            // 2.5-1. 숫자여부 판별하기//////////////////////////////////
+            /////////////////////////////////////////////////////////////
+
+            // 숫자여부 판별 js내장함수 : isNaN(값)
+            // is Not a Number? 숫자가 아니니?
+            // 만약 숫자가 아니면 true
+
+            console.log("숫자가 아니니?", isNaN(score));
+
+            if (isNaN(score)) {
+                // 1.숫자가 아닌 경우 메시지 출력
+                jexp.innerText = "숫자를 입력하세요!";
+
+                // 2.글자색 초기화(바뀌었을수 있으므로)
+                jexp.style.color = "#000";
+
+                // 3.칭찬스티커 초기화(바뀌었을 수있음)
+                jshow.style.backgroundPosition = "322px 0";
+
+                // 4.입력창 내용지우기
+                jumsu.value = ""; // 빈 문자값을 넣으면 지워짐
+
+                // 5.입력창에 포커스주기(버튼클릭한 경우)
+                jumsu.focus();
+                // focus() js 내장함수는 입력창에 커서가 감!
+
+                // 아래쪽 코드를 실행하지 않도록 함수나가기!
+                return;
+                // 리턴은 함수를 나가는 키워드임!
+                // return 값 -> 어떤 값을 가지고 함수를
+                // 호출한 곳으로 돌아갈수도 있다!
+            } //////////if////////////////
+
+            /////////////////////////////////////////////////////////////
+            // 2.5-2. 숫자범위 판별하기//////////////////////////////////
+            /////////////////////////////////////////////////////////////
+
+            // 0~100 사이수가 아닌 경우 걸러내기!
+            // else if로 위의 숫자가 아닌여부에 이어진 if문!
+            // 조건:0미만 이거나 100초과인 경우
+            else if (score < 0 || score > 100) {
+                // 1.숫자가 아닌 경우 메시지 출력
+                jexp.innerText = "0이상 100이하의 숫자만 입력하세요!";
+
+                // 2.글자색 초기화(바뀌었을수 있으므로)
+                jexp.style.color = "#000";
+
+                // 3.칭찬스티커 초기화(바뀌었을 수있음)
+                jshow.style.backgroundPosition = "322px 0";
+
+                // 4.입력창 내용지우기
+                jumsu.value = ""; // 빈 문자값을 넣으면 지워짐
+
+                // 5.입력창에 포커스주기(버튼클릭한 경우)
+                jumsu.focus();
+                // focus() js 내장함수는 입력창에 커서가 감!
+
+                // 아래쪽 코드를 실행하지 않도록 함수나가기!
+                return;
+                // 리턴은 함수를 나가는 키워드임!
+                // return 값 -> 어떤 값을 가지고 함수를
+                // 호출한 곳으로 돌아갈수도 있다!
+            } ///////////////////else if//////////////////////////////////
+
+            /////////////////////////////////////////////////////////////
             ////// 결과메시지 변수///////////////////////////////////////
+            /////////////////////////////////////////////////////////////
             var msg;
-            // console.log("할당안된 msg 변수:",msg);
+            // // console.log("할당안된 msg 변수:",msg);
             // 아무값도 넣지않으면
             // undefined (정의되지않은값)이 셋팅된다!
 
             // 결화에 따른 글자색 변수
             var fc;
-            
+
             // 결과에 따른 칭찬스티커 위치변수
             var pos;
 
@@ -80,7 +146,7 @@
             //     msg = "잘함";
             // }/////else if /////////////////////
 
-            console.log("msg 변수:", msg, "/색상:", fc,"/위치",pos);
+            // console.log("msg 변수:", msg, "/색상:", fc,"/위치",pos);
 
             // 4.결과 출력
             jexp.innerText = "평가결과는" + msg;
@@ -139,7 +205,7 @@
             position: absolute;
             top: -22px;
             left: 127px;
-            transform:scale(.3);
+            transform: scale(.3);
             width: 322px;
             height: 322px;
             background: url(./images/ifshow.jpg) no-repeat;
@@ -148,9 +214,10 @@
 
             /* 트랜지션:속시이지 */
             transition: all .4s ease-out;
-            
+
         }
-        .ir{
+
+        .ir {
             display: block;
             width: 0;
             height: 0;
@@ -200,6 +267,14 @@
         왜? 입력창에 대한 설명으로 리더기가 이것을 읽어줌!
 
      -->
+     <hr>
+
+     <!-- switch case문 -->
+     <h2>switch case문 연습</h2>
+     <h3 id="info">국번안내</h3>
+     <label for="local">지역명 입력:</label>
+     <input type="text" id="local" placeholder="지역명에 '도'를 빼고 쓰세요!">
+     <button class="sbtn">국번문의</button>
 </body>
 
 </html>
