--- a/003.JS학습/js003.html
+++ b/003.JS학습/js003.html
@@ -197,7 +197,90 @@
 
              ※ 주의사항:else if나 else문은 처음에 쓰거나 단독으로
              사용할 수없다!
+
+             ※ 참고 : 만약 if문의 실행문이 한줄일 경우 중괄호를 생략할수있다.
+                예)
+                if(aa>10) {my = "야야";}
+                아래처럼 중괄호 생략가능
+                if(aa>10) my = "야야";
         ***************************************************************/
+       /******************************************************************** 
+             함수명:local
+             기능:지역명을 입력하면 지역국번을 안내한다!
+       ********************************************************************/
+      function local(){
+        // 1.함수호출확인
+        // console.log("지역국번은 뭐냐?");
+
+        // 2-1.대상선정:읽어올 대상 - input#local
+        var tg = document.querySelector("#local");
+
+        // 2-2. 대상선정:출력대상 - #info
+        var info = document.querySelector("#info");
+
+        // 3.입력된 값 읽어오기
+        var txt = tg.value;
+        // input요소에 입력된 값을 읽어옴(value)
+        console.log("지역명:",txt);
+
+        // 메시지 변수
+        var msg; //선언만하고 할당은 제어문에서!
+
+        // 4.지역명을 switch case문으로 불류하여 메시지 넣기
+        switch (txt){
+            case "서울": msg="02"; break;
+            case "경기": msg="031"; break;
+            case "인천": msg="032"; break;
+            case "부산": msg="051"; break;
+            case "제주": msg="064"; break;
+            default: msg="esc";
+        }////////switch case ///////////////////
+
+        console.log("메시지:",msg);
+
+        // 5. 메시지 만들기
+        // msg변수에 최종 출력내용을 다시 담아서 변경함
+        if(msg==="esc"){
+            msg = "등록되지 않는 지역입니다!";
+        }///if////////////////////////
+        else{
+            msg = `${txt}의 지역번호는 ${msg}입니다!`;
+        }/////////else////////////
+
+        // 6.화면출력
+        // 출력대상:#info -> info변수
+        info.innerText = msg;
+
+
+
+      }///////////////local 함수///////////////////////////////////
+      ////////////////////////////////////////////////////////////
+
+      /************************************************************ 
+        [switch case문]
+        -단일조건을 분류하여 실행문을 만들어 줄때
+        사용하는 제어구문
+
+        -문장구조
+        ---------------------------------------------------------
+        switch(변수){
+            case 경우1:실행코드; break;
+            case 경우2:실행코드; break;
+            case 경우3:실행코드; break;
+            ...
+            default:실행문;
+        }
+        -------------------------------------------
+        - 작동원리:
+        1.변수값에 해당하는 경우 그값에 해당하는 case에 
+        들어가서 실행코드를 실행함
+        2.각 case 끝에 break 예약어를 반드시 써야함!
+            ->안쓰면 다른 case 에 또 들어가는 경우가 생김
+            ->일반적으로 break 키워드는 제어문을 빠져나감!
+        3.default 는 if 문의 else문과 비슷하여 해당 케이스가 
+        없으면 이곳이 실행된다.(단,필요할때만 사용함)
+            ->default에는 break문을 쓰지 않는다!
+      ************************************************************/
     </script>
     <style>
         /* 칭찬스티커 */
@@ -273,8 +356,10 @@
      <h2>switch case문 연습</h2>
      <h3 id="info">국번안내</h3>
      <label for="local">지역명 입력:</label>
-     <input type="text" id="local" placeholder="지역명에 '도'를 빼고 쓰세요!">
-     <button class="sbtn">국번문의</button>
+     <input type="text" id="local" 
+     placeholder="지역명에 '도'를 빼고 쓰세요!" 
+     onkeypress="if (event.keyCode == 13)local()">
+     <button class="sbtn" onclick="local()">국번문의</button>
 </body>
 
 </html>
