--- a/003.JS학습/js003.html
+++ b/003.JS학습/js003.html
@@ -335,7 +335,15 @@
         -증 -> 증감(1씩 증가는 ++ / 1씩 감소는 --)
 
         [for문의 진행순서]
-        1.
+        1. 먼저 시작값을 변수에 선언 후 할당하여 시작함!
+        2. 중앙에 있는 한계값 조건에 맞는지 검사함
+        3. 맞으면(true이면) for문의 중괄호{}안의 코드실행 
+        4. 중괄호{}안의 코드실행후 세번째 증감으로 올라감
+            ++ / -- 로 1씩 증감함
+        5. 중앙에 있는 한계값 조건에 맞는지 검사함
+        6. 조건에 맞는 동안 중괄로{}안의 코드를 반복실행함!
+        7. 중앙에 한계값 조건에 맞지 않으면 (false이면)
+            for문을 빠져나온다!
      ***************************************************************/
 
     </script>
