--- a/001.HTML 학습/09.VOGUE_PJ/002.site/index.html
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vogue PJ</title>
+    <!-- 텝메뉴 아이콘 favicon -->
+    <link rel="shortcut icon" href="images/icon.jpg">
     <!-- 폰티스트 아이콘 CDN CSS 불러오기 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -12,7 +14,7 @@
 
 <body>
     <!-- 1.상단영역 -->
-    <div>
+    <div id="top">
         <header class="top ibx">
             <!-- 1-1.상단메뉴 -->
             <div class="tmenu">
@@ -199,8 +201,30 @@
         </main>
     </div>
     <!-- 3.하단영역 -->
-    <div>
-        <footer class="info ibx"></footer>
+    <div class="bgc">
+        <footer class="info ibx">
+            <!-- 3-1.하단로고 -->
+            <div class="blogo">
+                <img src="images/footer_logo.png" alt="하단로고">
+            </div>
+            <!-- 3-2.회사주소 -->
+            <address class="addr">WWW.VOGUE.COM Ⓒ CONDÉNAST ASIA PACIFIC. INC. ALL RIGHTS RESERVED. VOGUE.COM KOREA IS OPERATED BY DOOSAN MAGAZINE.</address>
+            <!-- 3-3.하단링크 -->
+            <ul class="blink">
+                <li>
+                    <a href="#">정기구독</a>
+                </li>
+                <li>
+                    <a href="#">회사소개</a>
+                </li>
+                <li>
+                    <a href="#">광고 및 제휴</a>
+                </li>
+                <li>
+                    <a href="#">개인정보 처리방침</a>
+                </li>
+            </ul>
+        </footer>
     </div>
 </body>
 
