--- a/001.HTML 학습/05.Nav_PJ/nav08.html
+++ b/001.HTML 학습/05.Nav_PJ/nav08.html
@@ -103,7 +103,7 @@
             /* height: 0; */
             /* overflow: hidden; */
             /* 높이값0, 넘치는 자식요소 숨기기로 서브안보이게 함! */
-            background-color: rgb(186, 202, 190);
+            background-color:rgb(186 202 190){
 
             /* 트랜지션:속시이지 */
             /* transition: height .4s ease-out; */
