--- a/9997adidas/intro.html
+++ b/9997adidas/intro.html
@@ -18,7 +18,7 @@
         <a href="index.htnml">
             <!-- <img src="images/pngegg.png" alt="adia"> -->
             <!-- <img src="images/pngwing.com.png" alt="adia"> -->
-            <span>≡adidas</span>
+            <span>≡</span><span>adidas</span>
         </a>
     </h1>
 
