js002 바렛콘스트

--- a/003.JS학습/RollingG.html
+++ b/003.JS학습/RollingG.html
@@ -78,7 +78,7 @@
                 }///////////////////Click함수////////////////////////////////
 
             });//////////////////load구역////////////////////////////////////
-            
+
             /////////////////////////////////////////////////////////////////
             // 함수바깥에 선언하여 쓰는 변수를 전역변수라고 한다!
             // 전역변수의 의미는? -> 공용메모리의 의미임!
@@ -118,7 +118,12 @@
             console.log("이미지번호:",num);
 
             // 4.변경내용:이미지src를 이전/다음 이미지로 변경
-            tg.src = `./images/img${num}.jpg`;
+            tg.setAttribute("src",`./images/img${num}.jpg`);
+            // tg.src = `./images/img${num}.jpg`;
+
+            // 속성셋팅 방법 2가지:
+            // 1.선택요소.속성명=속성값
+            // 2.선택요소.setAttribute(속성명,속성값)
 
        }///////////////chgImg함수/////////////////////////////////////////
        ///////////////////////////////////////////////////////////////////
