js 배열메서드

--- a/9997adidas/index.html
+++ b/9997adidas/index.html
@@ -168,7 +168,7 @@
             <ul>
                 <li>
                     <a href="#" onclick="멍멍('-5Dc8EMVYBo')">
-                        <img src="images/Predator_Freak.1_Artificial_Grass_Cleats_Red_FY6253_01_standard.jpg" alt="듄">
+                        <img src="images/pngegg (1).png" alt="듄">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
@@ -180,7 +180,7 @@
                 </li>
                 <li>
                     <a href="#" onclick="멍멍('LGISEufCegI')">
-                        <img src="images/m2.jpg" alt="유체이탈자">
+                        <img src="images/pngegg (2).png" alt="유체이탈자">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
@@ -192,7 +192,7 @@
                 </li>
                 <li>
                     <a href="#" onclick="멍멍('BdkSkI61aGo')">
-                        <img src="images/m3.jpg" alt="이터널스">
+                        <img src="images/pngegg (3).png" alt="이터널스">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
@@ -204,7 +204,7 @@
                 </li>
                 <li>
                     <a href="#" onclick="멍멍('dWEQjU3GCE0')">
-                        <img src="images/m4.jpg" alt="연애 빠진 로맨스">
+                        <img src="images/pngegg (4).png" alt="연애 빠진 로맨스">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
@@ -216,7 +216,7 @@
                 </li>
                 <li>
                     <a href="#" onclick="멍멍('dWEQjU3GCE0')">
-                        <img src="images/m5.jpg" alt="프렌치 디스패치">
+                        <img src="images/pngegg (5).png" alt="프렌치 디스패치">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
@@ -228,7 +228,7 @@
                 </li>
                 <li>
                     <a href="#" onclick="멍멍('JfVOs4VSpmA')">
-                        <img src="images/m6.jpg" alt="스파이더맨:노웨이홈">
+                        <img src="images/pngegg (6).png" alt="스파이더맨:노웨이홈">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
