--- a/003.JS학습/JS004.html
+++ b/003.JS학습/JS004.html
@@ -41,14 +41,14 @@
 
         // 로드구역 //////////////////////////////////////////
         // window객체:브라우저 전체창에 관련된 객체
-        window.addEventListener("DOMContentLoaded",loadFn);
+        window.addEventListener("DOMContentLoaded", loadFn);
         // 파라미터값이 없는 함수를 호출시에는 함수명만 써도됨!
 
         /********************************************************************** 
             함수명: loadFn
             기능: 페이지 로딩시 호출되는 함수
         **********************************************************************/
-       function loadFn(){
+        function loadFn() {
             // 1.로딩 후 호출확인
             console.log("로딩완료!");
 
@@ -72,13 +72,13 @@
 
             ******************************************************************/
 
-            let arr1 = new Array("1993년 10월 12일","183cm","65kg","너도 인간이니?",4568,"서강준");
+            let arr1 = new Array("1993년 10월 12일", "183cm", "65kg", "너도 인간이니?", 4568, "서강준");
             // new키워드로 선언과 할당을 동시에 할수 있다!
             // 소괄안에 콤마로 구분하여 값을 할당할 수있다!
 
             // 배열변수에 할당한 데이터 불러오기
             // 호출방법:배열변수명[순번] - > 순번은 0부터
-            
+
             // 출력대상:txt1
             let txt1 = document.getElementById("txt1");
 
@@ -95,76 +95,239 @@
             // 이 방식이 가장 많이 쓰이는 보편적인 방식임
             // new Array()라고 객체생성을 하지 않아도 자동생성됨!
             let arr2 = ["삼일절",
-            "태극기",
-            1919,
-            function(){
-                alert("대한독립만세");
-            }
-        ];///////////////배열//////////////////////////////
+                "태극기",
+                1919,
+                function () {
+                    alert("대한독립만세");
+                }
+            ]; ///////////////배열//////////////////////////////
 
-        // function(){} 익명함수 - 배열에 함수넣을 수 있음!
+            // function(){} 익명함수 - 배열에 함수넣을 수 있음!
 
-        // 배열변수 개수 찍기
-        console.log("arr2배열개수:",arr2.length);
+            // 배열변수 개수 찍기
+            console.log("arr2배열개수:", arr2.length);
 
-        // 출력대상:txt2
-        let txt2 = document.getElementById("txt2");
-        // 출력할 문장 : 삼일절은 1919년에 일제에 항거하여
-        // 태극기를 들고 일어난 민중봉기를 기념하는 날이다
-        txt2.innerText = `${arr2[0]}은 ${arr2[2]}년에 일제에 항거하여 ${arr2[1]}를 들고 일어난 민중봉기를 기념하는 날이다`;
+            // 출력대상:txt2
+            let txt2 = document.getElementById("txt2");
+            // 출력할 문장 : 삼일절은 1919년에 일제에 항거하여
+            // 태극기를 들고 일어난 민중봉기를 기념하는 날이다
+            txt2.innerText = `${arr2[0]}은 ${arr2[2]}년에 일제에 항거하여 ${arr2[1]}를 들고 일어난 민중봉기를 기념하는 날이다`;
 
-        // 두번째 텍스트박스에 툴팁 띄우기!
-        txt2.title = "여기를 클릭하세요!";
-        // 손가락모양
-        txt2.style.cursor = "pointer";
+            // 두번째 텍스트박스에 툴팁 띄우기!
+            txt2.title = "여기를 클릭하세요!";
+            // 손가락모양
+            txt2.style.cursor = "pointer";
 
-        // txt2를 클릭하면 배열의 함수를 호출!
-        txt2.onclick = function(){
-            arr2[3]();
-            // 함수호출시 소괄호 필수
-        }///////////click 함수 ///////////////////////////
+            // txt2를 클릭하면 배열의 함수를 호출!
+            txt2.onclick = function () {
+                arr2[3]();
+                // 함수호출시 소괄호 필수
+            } ///////////click 함수 ///////////////////////////
 
-        // 3.배열을 미리생성하여 각각 할당하는 방법
-        // 배열변수명 = [] -> 이변수가 배열변수로 설정됨!
-        // 배열변수명.length = 숫자 -> 숫자만큼 배열이 생성됨!
-        // 배열변수명.length 는 배열개수도 읽고 설정도함!
+            // 3.배열을 미리생성하여 각각 할당하는 방법
+            // 배열변수명 = [] -> 이변수가 배열변수로 설정됨!
+            // 배열변수명.length = 숫자 -> 숫자만큼 배열이 생성됨!
+            // 배열변수명.length 는 배열개수도 읽고 설정도함!
 
-        let arr3 = []; // arr3변수가 배열변수로 설정!
-        arr3.length = 8; // arr3가 8개의 공간을 설정함!
-        // 각 배열주소에 값을 할당한다!
-        arr3[0] = "산";
-        arr3[1] = "할아버지";
-        arr3[2] = "구름모자";
-        arr3[3] = "썻네~!";
-        arr3[4] = "나비같이";
-        arr3[5] = "훨훨";
-        arr3[6] = "훠얼훨";
-        arr3[7] = "날아서~!";
+            let arr3 = []; // arr3변수가 배열변수로 설정!
+            arr3.length = 8; // arr3가 8개의 공간을 설정함!
+            // 각 배열주소에 값을 할당한다!
+            arr3[0] = "산";
+            arr3[1] = "할아버지";
+            arr3[2] = "구름모자";
+            arr3[3] = "썻네~!";
+            arr3[4] = "나비같이";
+            arr3[5] = "훨훨";
+            arr3[6] = "훠얼훨";
+            arr3[7] = "날아서~!";
 
-        // 배열값 전체찍기: valueOf()
-        // -> 배열전체값을 콤마로 구분하여 출력함
-        console.log("arr3 배열전체값:",arr3.valueOf());
-        // 참고로 변수만 찍어도 valueOf()를 브라우저가 해줌!
+            // 배열값 전체찍기: valueOf()
+            // -> 배열전체값을 콤마로 구분하여 출력함
+            console.log("arr3 배열전체값:", arr3.valueOf());
+            // 참고로 변수만 찍어도 valueOf()를 브라우저가 해줌!
 
-        // 변수 전체찍기에서 사이에 구분자 변경하기
-        // join(구분자) -> 구분자는 특수문자 등 구분하는문자
-        console.log("arr3 배열구분자변경:",arr3.join("^"));
-        // join()은 구분자를 넣은 문자데이터다!
+            // 변수 전체찍기에서 사이에 구분자 변경하기
+            // join(구분자) -> 구분자는 특수문자 등 구분하는문자
+            console.log("arr3 배열구분자변경:", arr3.join("^"));
+            // join()은 구분자를 넣은 문자데이터다!
 
-        // 화면출력 대상: #txt3
-        let txt3 = document.getElementById("txt3");
+            // 화면출력 대상: #txt3
+            let txt3 = document.getElementById("txt3");
 
-        // 배열값 뒤에 동적으로 추가하기!
-        // push(값) -> 배열맨뒤에 값을 추가!
-        arr3.push("김창완작사");
+            // 배열값 뒤에 동적으로 추가하기!
+            // push(값) -> 배열맨뒤에 값을 추가!
+            arr3.push("김창완작사");
 
-        // 배열사이에 별(★)을 넣어서 출력할 것!
-        txt3.innerText = arr3.join("★");
+            // 배열사이에 별(★)을 넣어서 출력할 것!
+            txt3.innerText = arr3.join("★");
+
+            /*********************************************************************** 
+                [객체(object) 란?]
+
+                -독립된 속성과 메서드를 가지는 프로그램 단위체
+                -속성은 명사적 특징,메서드는 동사적 특징
+                예) 
+                자동차의 명사적특징:핸들,백미러,트렁크 등
+                자동차의 동사적특징:운전하다, 멈추다, 주차하다 등
+
+                (참고:
+                    브라우저에 이미 만들어져 있는 객체들을
+                    내장객체라고 한다!
+                    ->브라우저 내장 객체들:
+                    window : 윈도우(브라우저화면)표시 관련 객체
+                    document : 문서구조에 관련된 객체
+                    Array : 배열객체
+                    Object : 객체를 만들기 위한 객체
+                    Date : 날짜객체
+                    Math : 수학객체
+                )
+
+                [객체의 선언]
+                -new Object()
+
+                [객체의 할당]
+                -중괄호를 사용하여 할당코딩을 함
+                -{속성명:값,속성명:값,...}
+                -여러값을 셋팅할때 콤마로 구분한다
+                -배열과 비교하여 이해하기 쉽고 호출하기 쉽다!
+                -객체의 스타일로 데이터 구조를 만들고
+                이런 파일로 DB와 데이터 통신을 하는 경우가 많다!
+                이런 파일을 제이슨(JSON:확장자.json) 이라고 한다!
+
+                [객체의 호출]
+                -객체명[속성명]
+
+            ***********************************************************************/
+            const SHK = new Object({
+                "너의 이름은?": "김수현",
+                "생일": "1988년 2월 16일",
+                "키": "180cm",
+                "몸무게": "65kg",
+                "성별": "남자",
+                "비밀번호": 7777,
+                "팬레터": function () {
+                    // 메시지 띄우기
+                    alert("오빠, 지금뭐해?");
+                    // 2. 배경이미지 출력박스에 넣기
+                    txt4.style.background =
+                        "url(https://file2.nocutnews.co.kr/newsroom/image/2020/01/01/20200101093641185867_0_786_786.jpg) repeat-x top/auto 100%";
+                    // 3.글자색
+                    txt4.style.color = "#fff";
+                    // 4.글자그림자
+                    txt4.style.textShadow = "0 0 5px #000";
+                    // 5.글자내용변경하기
+                    txt4.innerText = "김수현 최고 멋쟁이! 승승장구! 화이팅!";
+                    // 6.트랜지션
+                    txt4.style.transition = "1s ease-out 1s";
+                    // 7. 박스크게하기
+                    txt4.style.transform = "scale(1.2)";
+                }
+            }); ///////////////SHK/////////////////////////
+
+            // 객체 출력하기
+            // 대상:#txt4 
+            let txt4 = document.getElementById("txt4");
+
+            txt4.innerText =
+                `당신이 좋아하는 남자배우는? ${SHK["너의 이름은?"]}`;
+            txt4.innerText +=
+                ` / 몸무게를 아세요? ${SHK["몸무게"]}`;
+
+            // 객체에 셋팅된 함수를 보통 "메서드"라고 부른다!
+            // 이 메서드를 호출해 보자!
+            txt4.onclick = function () {
+                SHK["팬레터"]();
+                // 함수 호출시엔 소괄호 필수!!!
+            }; ////////////////// click 함수 //////////////////////////////////
+
+            // title속성 넣기(툴팁나오게)
+            txt4.title = `여기를 클릭하여 ${SHK["너의 이름은?"]}팬레터를 확인하세요!`;
+
+            // 손가락표시
+            txt4.style.cursor = "pointer";
+
+            /******************************************************************** 
+                [ new 키워드 없이 바로 객체를 생성하기!!! ]
+
+                -방법:변수 선언 후 이퀄 뒤에 바로 중괄호사용!
+                예)let obj = {속성명:값,속성명:값,......}
+
+                [ 객체의 속성 셋팅 시 문자형 또는 변수형 사용하기 ]
+
+                1.문자형 속성 - 따옴표로 싸는 방법
+
+                예)let obj = {"나는나":"호호호","너는너":"하하하"}
+                -> 문자형 속성의 객체를 호출시
+                객체면[문자형속성명]
+                예) obj["나는나"]
+
+                2.변수형 속성- 따옴표로 안싼 문자
+                예) let obj = {name:"김수현",tall:"186cm"}
+                -> 변수형 속성의 객체 호출시
+                객체명.속성명
+                예)obj.name
+
+                또는
+
+                객체명["속성명"]
+                예) obj["name"]
+                -> 반드시 변수형 속성명을 따옴표로 싸서
+                문자형으로 표시해야함!
+                obj[name] - > 에러남!
+
+
+            ********************************************************************/
+
+            // 객체 생성하기////
+            const GU = {
+                name: "공유",
+                tall: "184cm",
+                weight: "74kg",
+                com: "매니지먼트 숲",
+                work: "도깨비,부산행",
+                // function(){} 대신  ()=>{}화살표함수
+                msg: (txt) => { //txt는 전달변수
+                    // 1.메시지 띄우기
+                    alert("펜레터:" + txt);
+                    // 2.공유 이미지 배경에 넣기
+                    txt5.style.background =
+                        "url(https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Gong_Yoo_%28Sep_2016%29.png/250px-Gong_Yoo_%28Sep_2016%29.png) repeat-x top/auto 100%";
+                } //////// msg 메서드 //////////////
+            }; /////////////// GU 객체 ///////////////////////////////////////////////
+
+            // GU 객체 출력하기///////////
+            //출력대상: #txt5
+            let txt5 = document.getElementById("txt5");
+
+            // 줄간격 조정
+            txt5.style.lineHeight = "24px";
+
+            // 내용출력
+            txt5.innerHTML = `저는 ${GU.name}입니다. 몸무게는 비밀인데 그래도 말씀드리자면 ${GU.weight}입니다.ㅎㅎㅎ <br>
+            제 대표작은 ${GU.work}입니다. <br> 제소속사는 모르시는 분들이 많은데 ${GU.com}입니다. 빠이빠이~!`;
+
+            // 공유박스 마우스 오버시 툴팁보이기
+            // 속성넣기 2가지 방법:
+            // 요소.속성명=값 or 요소.setAttribute(속성명,값)
+            txt5.setAttribute("title", GU.name + "의 펜레터를 확인하세요! 바로클릭!");
+
+            // 손가락모양
+            txt5.style.cursor = "pointer";
+
+
+            // 공유박스 클릭시 GU객체의 메서드 호출하기!
+            txt5.onclick = () => {
+                GU.msg("\n공유오빠, 서복에서도 멋쪘어요! \n차기작도 기대해요! 화이팅!!!")
+                // alert창은 html태그를 사용할수없다
+                // 따라서 줄바꿈은 \n 줄바꿈문자를 사용한다!
+                // 역슬래쉬 표시는 글자체에 따라 다르게 나온다
+                // 원표시나 진짜 역슬래쉬 표시중 하나로나옴
+            }; ////////click함수//////////////////////////
 
 
 
-       }/////////////////loadFn 함수 //////////////////////////////////////////
 
+        } /////////////////loadFn 함수 //////////////////////////////////////////
     </script>
 </head>
 
