--- a/003.JS학습/JS004.html
+++ b/003.JS학습/JS004.html
@@ -8,8 +8,8 @@
         h1 {
             text-align: center;
         }
-
-        div {
+        /* body직계 div만 적용! */
+        body>div {
             width: 1000px;
             height: 80px;
             border: 2px solid #000;
@@ -292,6 +292,18 @@
                     // 2.공유 이미지 배경에 넣기
                     txt5.style.background =
                         "url(https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Gong_Yoo_%28Sep_2016%29.png/250px-Gong_Yoo_%28Sep_2016%29.png) repeat-x top/auto 100%";
+
+                    // 3.글자색변경
+                    txt5.style.color = "#fff";
+                    // 4.글자그림자(테두리)
+                    txt5.style.textShadow = "1px 0 #000,-1px 0 #000,0 1px #000,0 -1px #000";
+                    // 5.높이값 설정
+                    txt5.style.transition = "2s ease-in-out .5s";
+                    // 7.줄간격
+                    txt5.style.lineHeight = "30px";
+                    // 8.상단패딩
+                    txt5.style.paddingTop = "100px";
+
                 } //////// msg 메서드 //////////////
             }; /////////////// GU 객체 ///////////////////////////////////////////////
 
@@ -324,10 +336,152 @@
                 // 원표시나 진짜 역슬래쉬 표시중 하나로나옴
             }; ////////click함수//////////////////////////
 
+            ////////////////////////////////////////////////////////////////////
+            /////////// 미션:#txt6는 객체를 만들어서 자유출력하시오!
+            /////////// 자신의 영화를 선정하여 아래와 같은 항목으로
+            /////////// 영화정보를 셋팅하시오!
+
+            //변수명을 자신이 지어본다!
+            const myMovie = {
+                // 1.영화제목
+                title: "미나리(Minari)",
+                // 2.감독
+                director: "정이식",
+                // 3.배우
+                actors: "윤여정,한예리",
+                // 4.장르
+                genre: "드라마",
+                // 5.관람가
+                ratings: "12세관람가",
+                // 6.예고편(메서드)
+                trailer: () => {
+                    // 1.호출확인
+                    console.log("예고편!");
+                    // 2. 영화박스 만들고 iframe 넣기
+                    // 대상: #mvbx
+                    let mvbx = document.getElementById("mvbx");
+                    mvbx.innerHTML =
+                        `
+                        <div id="mv">
+                            // 유튜브 아이프레임
+                            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/lPYxbbKYYmE?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            
+
+                            <span class="cbtn">×</span>   
+                        </div>
+                    `;
+
+                    // 삽입된 동영상박스(#mv) css설정하기
+                    let mv = document.getElementById("mv");
+                    mv.style.position = "fixed";
+                    mv.style.top = "50%";
+                    mv.style.left = "50%";
+                    mv.style.transform = "translate(-50%,-50%)";
+                    mv.style.weight = "700px";
+                    mv.style.height = "450px";
+                    mv.style.backgroundColor ="#000";
+
+                    // 닫기버튼 셋팅
+                    let cbtn = document.querySelector(".cbtn");
+                    cbtn.style.position = "absolute";
+                    cbtn.style.top = "0";
+                    cbtn.style.right = "-70px";
+                    cbtn.style.width = "50px";
+                    cbtn.style.height = "50px";
+                    cbtn.style.backgroundColor = "blue";
+                    cbtn.style.textAlign = "center";
+                    cbtn.style.fontSize="40px";
+                    cbtn.style.fontWeight = "bold";
+                    cbtn.style.color = "white";
+                    cbtn.style.borderRadius = "50%";
+                    cbtn.style.cursor = "pointer";
+                    cbtn.style.lineHeight = "40px";
+
+                    // 닫기버튼 클릭시 #mv 지우기 
+                    cbtn.onclick = ()=>mv.remove();
+                    // ()=>{실행문}
+                    // 실행문이 하나일 경우 중괄호 생략가능
+                    // ()=>실행문
+                    // remove() 메서드 선택요소를 삭제함!
 
 
+                } ////trailer메서드///////////////////
+
+            }; //////////////// myMovie 객체 /////////////////////////
+
+            // 객체화면 출력
+            // 대상:#txt6
+            let txt6 = document.getElementById("txt6");
+
+            // 줄간격조정
+            txt6.style.lineHeight = "34px";
+
+            // 출력
+            txt6.innerHTML = `
+                영화명 : ${myMovie.title}
+                감독 : ${myMovie.director}
+                배우 : ${myMovie.actors} <br>
+                장르 : ${myMovie.genre}
+                등급 : ${myMovie.ratings}
+            `;
+
+            // 툴팁보이기
+            txt6.title = `클릭하시면 ${myMovie.title}예고편을 보실 수 있습니다!`;
+            // 손가락표시
+            txt6.style.cursor = "pointer";
+
+            // 트레일러 메서드 호출하기
+            // txt6클릭시
+            txt6.onclick = () => {
+                myMovie.trailer();
+            }; ////////////////click 함수 ///////////////////////////
 
         } /////////////////loadFn 함수 //////////////////////////////////////////
+
+        /*************************************************************************** 
+            [ 객체에 대한 단상 ]
+
+            -객체는 배열처럼 데이터를 묶어서 저장하는
+            메모리 공간 역할을 한다. 그런데 호출시에
+            번호로 호출하는 배열처럼 기계적이지 않고
+            사람이 잘 이해할수 있는 문자로 호출값을
+            사용하는 아주 편리한 것이다.
+
+            두루 널리 쓰도록 하여라~~!
+            
+            (참고: 제이슨(json) 의 형식은 객체형식이다!)
+
+            ※ 정리 : 
+
+            _____________________________________________________________
+
+            배열값 설정
+            let 변수명 = [값1,값2,값3,...];
+
+            ______________________________________________________________
+
+            배열값 호출
+            변수명[순번] - > 순번은 0부터
+
+            _______________________________________________________________
+
+            객체값 설정
+            let 변수명 = {속성명1:값1,속성명2:값2,...};
+
+            ________________________________________________________________
+
+            객체값 호출
+
+            변수명[속성명]
+            ->속성명을 따옴표로 싼 문자형이여야함!!
+            (만약 변수형 속성명이어도 이렇게 부를때 따옴표로 싼다!)
+
+            또는
+
+            변수명.속성명
+            ->속성명은 반드시 변수형이여야 함!!!
+
+        ***************************************************************************/
     </script>
 </head>
 
@@ -339,6 +493,9 @@
     <div id="txt4"></div>
     <div id="txt5"></div>
     <div id="txt6"></div>
+
+    <!-- 예고편 동영상용 박스 -->
+    <aside id="mvbx"></aside>
 </body>
 
 </html>
