--- a/003.JS학습/JS004_배열메서드.html
+++ b/003.JS학습/JS004_배열메서드.html
@@ -55,7 +55,8 @@
         }
 
         /* 버튼 */
-        .mbtn,#sel{
+        .mbtn,
+        #sel {
             font-size: 20px;
             padding: 10px;
             border-radius: 10px;
@@ -64,74 +65,134 @@
     <script>
         ////////////////////////////로드구역////////////////////////////////
         window.addEventListener("DOMContentLoaded",
-        function(){
-            console.log("로딩완료!");
+            function () {
+                console.log("로딩완료!");
 
-            // 1.배열변수 선언과 할당
-            const fruit = ["배","사과","용과","딸기"];
+                // 배열번호 selelct박스
+                let arrNum = document.querySelector("#anum");
 
-            // 2.공통모듈요소
-            // (1)배열정보 출력
-            let showit = document.querySelector(".showit");
-            // (2)배열 이미지 출력
-            let cont = document.querySelector(".cont");
-            // (3)조작버튼요소들
-            let mbtn = document.querySelectorAll(".mbtn");
-            // (4)선택박스
-            let sel = document.querySelector("#sel");
+                // 0.현재배열개수만큼 번호새성하여 select 박스 만들기
+                const makeNum = () => {
+                    // 배열의 개수만큼 select박스의 option태그 만들기
+                    // for(시;한;증){}
+                    // 기존 option태그 지우기
+                    arrNum.innerHTML = "";
+                    for (let i = 0; i < fruit.length; i++) {
+                        arrNum.innerHTML +=
+                            `<option>${i}</option>`;
+                    } //////////for문/////////////////////////
 
-            // 3. 처음 배열 출력
-            showit.innerText = fruit.join("*");
+                }; //////////////makeNum함수///////////////////////////
 
-            // 4.각 기능버튼 함수 구현하기
+                // 1.배열변수 선언과 할당
+                const fruit = ["배", "사과", "용과", "딸기"];
+                // 과일명과 배경이미지명을 매칭함!->객체!!!
+                const frObj = {
+                    "배": "fruits_01",
+                    "사과": "fruits_02",
+                    "용과": "fruits_14",
+                    "딸기": "fruits_09"
+                }; ///frObj 객체///////////////
 
-            // 4.-1.과일주세요~! 버튼 (버튼순서:0)
+                // 1.5.배열에 맞게 지우기 선택번호 생성하기!
+                makeNum();
 
-            // 4-2.뒷배열추가요~! 버튼 (버튼순서:1)
-            mbtn[1].onclick = function(){
-                // 선택대상:#sel 인 선택박스의 값을
-                // 배열에 추가하기 - > push()배열뒤추가
-                fruit.push(sel.value);
-                // 배열정보 출력하기
+
+
+
+                // 2.공통모듈요소
+                // (1)배열정보 출력
+                let showit = document.querySelector(".showit");
+                // (2)배열 이미지 출력
+                let cont = document.querySelector(".cont");
+                // (3)조작버튼요소들
+                let mbtn = document.querySelectorAll(".mbtn");
+                // (4)선택박스
+                let sel = document.querySelector("#sel");
+
+                // 3. 처음 배열 출력
                 showit.innerText = fruit.join("*");
 
+                // 4.각 기능버튼 함수 구현하기
 
-            };/////////////// click 함수 /////////////////////////////////////
+                // 4.-1.과일주세요~! 버튼 (버튼순서:0)
+                mbtn[0].onclick = function () {
+                    // 1.호출확인
+                    console.log("과일주세요!");
+                    // 2.변경내용:배열의 과일만큼 ul>li를 만들어서
+                    // html로 .cont에 출력하기:
 
-            // 4-3.앞배열추가요~! 버튼 (버튼순서:2)
-            mbtn[2].onclick = function(){
-                // 선택대상:#sel 인 선택박스의 값을
-                // 배열에 추가하기 - > unshift()배열앞추가
-                fruit.unshift(sel.value);
-                // 배열정보 출력하기
-                showit.innerText = fruit.join("*");
+                    // 배열forEach()호출함수
+                    const mk = (val) => { // val-각 배열값 전달변수
+                        // 전달된 배열값으로 li코드를 만든다!
+                        code += `
+                        <li style="background:url(./addimg/${frObj[val]}.png) no-repeat center/cover">${val}</li>
+                    `;
+                    }; //////////////////mk함수///////////////////////////
 
+                    let code = "<ul>";
+                    // 배열내용만큼 li만들기!
+                    // 배열명.forEach(함수명) 
+                    // ->특징:배열값 하나씩 순서대로
+                    // 함수를 호출하며 값을 전달하는 배열메서드
+                    // 함수에서 코드생성!
+                    fruit.forEach(mk);
 
-            };/////////////// click 함수 /////////////////////////////////////
+                    code += "</ul>";
 
-            // 4-4.앞배열추가요~! 버튼 (버튼순서:3)
-            mbtn[3].onclick = function(){
-                // 뒷배열에 삭제하기 - > pop()배열뒤삭제
-                fruit.pop(sel.value);
-                // 배열정보 출력하기
-                showit.innerText = fruit.join("*");
+                    console.log("출력HTML:" + code);
 
+                    // 화면출력하기
+                    cont.innerHTML = code;
+                };
+                // 4-2.뒷배열추가요~! 버튼 (버튼순서:1)
+                mbtn[1].onclick = function () {
+                    // 선택대상:#sel 인 선택박스의 값을
+                    // 배열에 추가하기 - > push()배열뒤추가
+                    fruit.push(sel.value);
+                    // 배열정보 출력하기
+                    showit.innerText = fruit.join("*");
+                    // 1.5.배열에 맞게 지우기 선택번호 생성하기!
+                    makeNum();
 
-            };/////////////// click 함수 /////////////////////////////////////
+                }; /////////////// click 함수 /////////////////////////////////////
 
-            // 4-5.앞배열추가요~! 버튼 (버튼순서:4)
-            mbtn[4].onclick = function(){
-                // 앞배열에 삭제하기 - > shift()배열앞삭제
-                fruit.shift(sel.value);
-                // 배열정보 출력하기
-                showit.innerText = fruit.join("*");
+                // 4-3.앞배열추가요~! 버튼 (버튼순서:2)
+                mbtn[2].onclick = function () {
+                    // 선택대상:#sel 인 선택박스의 값을
+                    // 배열에 추가하기 - > unshift()배열앞추가
+                    fruit.unshift(sel.value);
+                    // 배열정보 출력하기
+                    showit.innerText = fruit.join("*");
+                    // 1.5.배열에 맞게 지우기 선택번호 생성하기!
+                    makeNum();
 
+                }; /////////////// click 함수 /////////////////////////////////////
 
-            };/////////////// click 함수 /////////////////////////////////////
+                // 4-4.앞배열추가요~! 버튼 (버튼순서:3)
+                mbtn[3].onclick = function () {
+                    // 뒷배열에 삭제하기 - > pop()배열뒤삭제
+                    fruit.pop(sel.value);
+                    // 배열정보 출력하기
+                    showit.innerText = fruit.join("*");
+                    // 1.5.배열에 맞게 지우기 선택번호 생성하기!
+                    makeNum();
 
-        });//////////////////////로드구역/////////////////////////////////////
+                }; /////////////// click 함수 /////////////////////////////////////
+
+                // 4-5.앞배열추가요~! 버튼 (버튼순서:4)
+                mbtn[4].onclick = function () {
+                    // 앞배열에 삭제하기 - > shift()배열앞삭제
+                    fruit.shift(sel.value);
+                    // 배열정보 출력하기
+                    showit.innerText = fruit.join("*");
+                    // 1.5.배열에 맞게 지우기 선택번호 생성하기!
+                    makeNum();
+
+                }; /////////////// click 함수 /////////////////////////////////////
+
+            }); //////////////////////로드구역/////////////////////////////////////
         //////////////////////////////////////////////////////////////////////
-       
     </script>
 </head>
 
@@ -148,6 +209,16 @@
         <button class="mbtn">앞배열추가요~!</button>
         <button class="mbtn">뒷배열삭제요~!</button>
         <button class="mbtn">앞배열삭제요~!</button>
+
+        <button class="mbtn">중간배열삭제~!</button>
+        <label for="anum">선택번호:</label>
+        <select name="anum" id="anum">
+            <option>0</option>
+        </select>
+        <label for="delnum">지울개수:</label>
+        <input type="text" id="delnum" value="1" maxlength="1">
+        <br>
+        <button class="mbtn">중간배열삽입~!</button>
         <!-- 과일선택박스 -->
         <select name="sel" id="sel">
             <option>사과</option>
