--- a/9997adidas/index.html
+++ b/9997adidas/index.html
@@ -31,7 +31,7 @@
     <!-- 1.상단영역 -->
     <header id="top" class="part">
         <!-- 1-1. 페이지 타이틀 -->
-        <h1 class="tit">CGV 예고편 상영관</h1>
+        <h1 class="tit">adidas</h1>
         <!-- 1-2. 전체메뉴(GNB) -->
         <nav class="gnb">
             <ul class="glist">
