--- a/9997adidas/intro.html
+++ b/9997adidas/intro.html
@@ -15,7 +15,7 @@
 
     <!-- 2.들어가기 버튼박스 -->
     <h1 id="enter">
-        <a href="index.htnml">
+        <a href="index.html">
             <!-- <img src="images/pngegg.png" alt="adia"> -->
             <!-- <img src="images/pngwing.com.png" alt="adia"> -->
             <span>≡</span><span>adidas</span>
