--- a/9997adidas/index.html
+++ b/9997adidas/index.html
@@ -36,35 +36,35 @@
         <nav class="gnb">
             <ul class="glist">
                 <li>
-                    <a href="#">영화</a>
+                    <a href="#">MEN</a>
                     <!-- 서브메뉴 -->
                     <div class="smenu">
                         <ol>
                             <li>
                                 <a href="#">
-                                    무비차트
+                                    Sneakers
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    HD 트레일러
+                                    Running Shoes
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    무비파인더
+                                    Soccer Shoes
                                 </a>
                             </li>
                             <li class="bdt">
                                 <a href="#" >
-                                    CGV아트하우스
+                                    Baskeball Shoes
                                 </a>
                             </li>
                         </ol>
                     </div>
                 </li>
                 <li>
-                    <a href="#">예매</a>
+                    <a href="#">WOMEN</a>
                     <!-- 서브메뉴 -->
                     <div class="smenu">
                         <ol>
@@ -82,7 +82,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="#">극장</a>
+                    <a href="#">KIDS</a>
                     <!-- 서브메뉴 -->
                     <div class="smenu">
                         <ol>
@@ -105,7 +105,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="#">이벤트&amp;컬처</a>
+                    <a href="#">SALE</a>
                     <!-- 서브메뉴 -->
                     <div class="smenu">
                         <ol>
@@ -245,11 +245,10 @@
     <footer id="info" class="part">
         <!-- 3-1. 회사정보 -->
         <address>
-            <img src="./images/blogo.png" alt="하단로고">
+            <span>adidas</span>
+            <!-- <img src="./images/pngwing.com.png" alt="하단로고"> -->
             <span>
-                (04377)서울특별시 용산구 한강대로 23길 55, 아이파크몰 6층(한강로동) <br>
-                대표이사 : 최병환사업자등록번호 : 104-81-45690통신판매업신고번호 : 2017-서울용산-0662 <br>
-                개인정보보호 책임자 : 정종민대표이메일 : cjcgvmaster@cj.netCGV고객센터 : 1544-1122 <br>
+                © 2022 adidas America, Inc.
             </span>
         </address>
         <!-- 3-2.sns박스 -->
