--- a/001.HTML 학습/09.VOGUE_PJ/002.site/index.html
+++ b/001.HTML 학습/09.VOGUE_PJ/002.site/index.html
@@ -10,6 +10,14 @@
     <!-- 폰티스트 아이콘 CDN CSS 불러오기 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <!-- 공통 js -->
+    <script src="js/common.js"></script>
+    <!-- <script src="js/common.js" defer></script> -->
+    <!-- 
+        외부js호출시 defor속성을 쓰면 html 로드후 실행함!
+        그런데 이것을 안쓸수도 있고 지워질 수있기 때문에
+        js파일자체에 로드구역을 만드는 것이 좋다!
+     -->
 </head>
 
 <body>
