cgv응용과제 하고 제출

--- a/9997adidas/index.html
+++ b/9997adidas/index.html
@@ -70,12 +70,22 @@
                         <ol>
                             <li>
                                 <a href="#">
-                                    빠른예매
+                                    Sneakers
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    상영시간표
+                                    Running Shoes
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Soccer Shoes
+                                </a>
+                            </li>
+                            <li class="bdt">
+                                <a href="#" >
+                                    Baskeball Shoes
                                 </a>
                             </li>
                         </ol>
@@ -88,17 +98,17 @@
                         <ol>
                             <li>
                                 <a href="#">
-                                    CGV 극장
+                                    Running Shoes
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    특별관
+                                    Soccer Shoes
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    CLUB 서비스
+                                    Baskeball Shoes
                                 </a>
                             </li>
                         </ol>
@@ -111,17 +121,17 @@
                         <ol>
                             <li>
                                 <a href="#">
-                                    이벤트
+                                    Shoes
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    기프트샵
+                                    Clothing
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    매거진
+                                    Accessories
                                 </a>
                             </li>
                         </ol>
@@ -132,7 +142,7 @@
             <!-- aside는 서브내용을 담는 div와 같은요소 -->
             <aside id="cam">
             <!-- 영사기 이미지 -->
-            <img src="./images/gnb.png" alt="영사기">
+            <!-- <img src="./images/gnb.png" alt="영사기"> -->
             <!-- 빔표시박스 -->
             <div class="bim"></div>
         </aside>
@@ -144,7 +154,7 @@
         <div id="screen">
             <!-- 유튜브 아이프레임 -->
             <iframe id="mymv"
-                src="https://www.youtube.com/embed/2hnkUpo_2yg?autoplay=1&mute=1&loop=1&playlist=2hnkUpo_2yg&playsinline=1"
+                src="https://www.youtube.com/embed/0OqEbS2mHSg?autoplay=1&mute=1&loop=1&playlist=0OqEbS2mHSg&playsinline=1"
                 allow="autoplay"></iframe>
             <!-- 
                 유튜브 src 값 구성
@@ -167,74 +177,74 @@
         <nav class="mlist">
             <ul>
                 <li>
-                    <a href="#" onclick="멍멍('-5Dc8EMVYBo')">
+                    <a href="#" onclick="멍멍('5OBLABWprtM')">
                         <img src="images/pngegg (1).png" alt="듄">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>듄</li>
-                            <li>티모시 샬라메</li>
-                            <li>모험,드라마,SF</li>
+                            <li>adidas</li>
+                            <li>Soccer Shoes</li>
+                            <li>270cm</li>
                         </ol>
                     </a>
                 </li>
                 <li>
-                    <a href="#" onclick="멍멍('LGISEufCegI')">
+                    <a href="#" onclick="멍멍('Rt7u0gZa2S4')">
                         <img src="images/pngegg (2).png" alt="유체이탈자">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>유체이탈자</li>
-                            <li>윤계상,임지연</li>
-                            <li>액션</li>
+                            <li>adidas</li>
+                            <li>Soccer Shoes</li>
+                            <li>270cm</li>
                         </ol>
                     </a>
                 </li>
                 <li>
-                    <a href="#" onclick="멍멍('BdkSkI61aGo')">
+                    <a href="#" onclick="멍멍('gZyKUo1yAjk')">
                         <img src="images/pngegg (3).png" alt="이터널스">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>이터널스</li>
-                            <li>안젤리나졸리,마동석</li>
-                            <li>액션,판타지</li>
+                            <li>adidas</li>
+                            <li>Soccer Shoes</li>
+                            <li>270cm</li>
                         </ol>
                     </a>
                 </li>
                 <li>
-                    <a href="#" onclick="멍멍('dWEQjU3GCE0')">
+                    <a href="#" onclick="멍멍('dfbOSCNPvUE')">
                         <img src="images/pngegg (4).png" alt="연애 빠진 로맨스">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>연애 빠진 로맨스</li>
-                            <li>전종서, 손석구</li>
-                            <li>멜로/로맨스,코미디</li>
+                            <li>adidas</li>
+                            <li>Soccer Shoes</li>
+                            <li>270cm</li>
                         </ol>
                     </a>
                 </li>
                 <li>
-                    <a href="#" onclick="멍멍('dWEQjU3GCE0')">
+                    <a href="#" onclick="멍멍('MgXN5IyP0mo')">
                         <img src="images/pngegg (5).png" alt="프렌치 디스패치">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>프렌치 디스패치</li>
-                            <li>틸다 스윈튼</li>
-                            <li>코미디,드라마</li>
+                            <li>adidas</li>
+                            <li>Soccer Shoes</li>
+                            <li>270cm</li>
                         </ol>
                     </a>
                 </li>
                 <li>
-                    <a href="#" onclick="멍멍('JfVOs4VSpmA')">
+                    <a href="#" onclick="멍멍('V3e9LcRn9sY')">
                         <img src="images/pngegg (6).png" alt="스파이더맨:노웨이홈">
 
                         <!-- 영화정보 -->
                         <ol class="movtxt">
-                            <li>스파이더맨:노웨이홈</li>
-                            <li>톰 홀랜드</li>
-                            <li>액션,모험</li>
+                            <li>adidas</li>
+                            <li>Soccer Shoes</li>
+                            <li>270cm</li>
                         </ol>
                     </a>
                 </li>
