포트폴리오 메인 만드는중

--- a/0000포트폴리오/index.html
+++ b/0000포트폴리오/index.html
@@ -10,7 +10,7 @@
     <!-- 1. 상단영역 -->
     <div>
         <header class="top ibx">
-            <div class="logo">
+            <nav class="gnb">
                 <ul>
                     <li>
                         <a href="#">
@@ -32,10 +32,6 @@
                             <img src="./images/ue-overlay.svg" alt="">
                         </a>
                     </li>
-                </ul>
-            </div>
-            <nav class="gnb">
-                <ul>
                     <li>
                         <a href="#">제품</a>
                     </li>
@@ -50,6 +46,25 @@
                     </li>
                 </ul>
             </nav>
+            <div class="sideMenu">
+                <ul class="smbx">
+                    <li>
+                        <a href="#">
+                            KO
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            내계정
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            검색
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <!-- <h2>상단영역</h2> -->
         </header>
     </div>
@@ -63,13 +78,57 @@
     <!-- 컨텐츠2 -->
     <div>
         <section class="cont cont2 ibx">
-            <h2>바로가기아이콘</h2>
+            <!-- <h2>바로가기아이콘</h2> -->
+            <div class="iconBox">
+                <div class="icon">
+                    <img src="./images/mobile-mice-and-keyboards.png" alt="">
+                    <h3>마우스&키보드</h3>
+                </div>
+                <div class="icon">
+                    <img src="./images/mobile-streaming.png" alt="">
+                    <h3>스트리밍</h3>
+                </div>
+                <div class="icon">
+                    <img src="./images/mobile-mobile-devices.png" alt="">
+                    <h3>모바일 장치</h3>
+                </div>
+                <div class="icon">
+                    <img src="./images/mobile-headsets.png" alt="">
+                    <h3>헤드셋</h3>
+                </div>
+            </div>
         </section>
     </div>
     <!-- 컨텐츠3 -->
     <div>
         <section class="cont cont3 ibx">
-            <h2>상품소개</h2>
+            <!-- <h2>상품소개</h2> -->
+            <div class="goodsBox">
+                <div class="goods">
+                    <img src="./images/plp-tile-mice-g305.png" alt="">
+                    <h3>LIGHTSPEED 무선</h3>
+                    <p>무선의 혁명이란 바로 이것입니다. 앤드투엔드 혁명 덕택에, 이제 선 없이도 1ms 보고율 및 지연 없이 견고한 연결성을 경험할 수 있습니다.</p>
+                    <span>추가 정보</span>
+                </div>
+                <div class="goods">
+                    <img src="./images/plp-tile-mice-g305.png" alt="">
+                    <h3>LIGHTSPEED 무선</h3>
+                    <p>무선의 혁명이란 바로 이것입니다. 앤드투엔드 혁명 덕택에, 이제 선 없이도 1ms 보고율 및 지연 없이 견고한 연결성을 경험할 수 있습니다.</p>
+                    <span>추가 정보</span>
+                </div>
+                <div class="goods">
+                    <img src="./images/plp-tile-mice-g305.png" alt="">
+                    <h3>LIGHTSPEED 무선</h3>
+                    <p>무선의 혁명이란 바로 이것입니다. 앤드투엔드 혁명 덕택에, 이제 선 없이도 1ms 보고율 및 지연 없이 견고한 연결성을 경험할 수 있습니다.</p>
+                    <span>추가 정보</span>
+                </div>
+                <div class="goods">
+                    <img src="./images/plp-tile-mice-g305.png" alt="">
+                    <h3>LIGHTSPEED 무선</h3>
+                    <p>무선의 혁명이란 바로 이것입니다. 앤드투엔드 혁명 덕택에, 이제 선 없이도 1ms 보고율 및 지연 없이 견고한 연결성을 경험할 수 있습니다.</p>
+                    <span>추가 정보</span>
+                </div>
+            </div>
         </section>
     </div>
     <!-- 컨텐츠4 -->
